fix dark mode

--- a/utils/video-player.css
+++ b/utils/video-player.css
@@ -26,9 +26,7 @@
     position: fixed;
     right: 30px;
     bottom: 30px;
-  
     max-width: 330px;
-    background-color: hsl(0, 0%, 98%);
     box-shadow:
       0 2px 1px 1px hsla(0, 0%, 0%, .05),
       0 2px 2px 2px hsla(0, 0%, 0%, .05),
@@ -81,7 +79,7 @@
     right: 0;
     bottom: 0;
     padding: 6px 8px;
-  
+    color: black;
     font-size: 8px;
     font-weight: 600;
     line-height: 1;
